--- a/1_tablas/tablas.html
+++ b/1_tablas/tablas.html
@@ -30,6 +30,7 @@
     </tr>
 </tr>
 </table>
-<a href="..\Index.html">Volver al índice</a>
+<a href="..\index.html">Volver al índice</a>
 </body>
 </html>
+
