--- a/1_tablas/tablas.html
+++ b/1_tablas/tablas.html
@@ -30,7 +30,8 @@
     </tr>
 </tr>
 </table>
-<a href="..\index.html">Volver al índice</a>
+<a href="../index.html">Volver al índice</a>
 </body>
 </html>
+
 
