--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="2_texto/texto.html">Texto</a></li>
     <li><a href="3_enlaces/enlaces.html">Enlaces</a></li>
     <li><a href="4_formulario/formulario.html">Formulario</a></li>
+    <li><a href="5_mi_web/Practica_Gabriel_Medina">Mi web</a></li>
 </ul>
 <br>
 <br>
@@ -17,3 +18,4 @@
 </body>
 
 </html>
+
