--- a/3_enlaces/enlaces.html
+++ b/3_enlaces/enlaces.html
@@ -15,8 +15,8 @@
         <p>Emplea alt</p>
         <p>Usa la ruta correcta. con dos puntos ".." busca un nivel arriba. ../</p>
         <p>210 x 190</p>
-        <img src="../5_mi_web/imagenes/css.png" alt ="CSS logo"width="210" height="190">
-        <img src="../5_mi_web/imagenes/react.png"alt ="REACT logo"width="210" height="190">
+        <img src="../imagenes/css.png" alt ="CSS logo"width="210" height="190">
+        <img src="../imagenes/react.png"alt ="REACT logo"width="210" height="190">
     <h1>IFrame</h3>
         <p>Ejemplo de Iframe que incrusta una pagina:</p>
         <p>Pagina 246 T2</p>
@@ -27,4 +27,5 @@
     <p><a href="../index.html">Volver al índice</a></p>
 </body>
 </html>
+
 
